Fix card size on tablet

--- a/src/components/Grid/index.css
+++ b/src/components/Grid/index.css
@@ -2,6 +2,23 @@
 
 /* Otros estilos aquí */
 
+@media (max-width: 960px) and (min-width: 560px) {
+  .flip-card-back ul {
+    margin: 30px 0 0 !important;
+    padding: 0 0 0 20px !important;
+  }
+  
+  .flip-card-back ul li {
+    flex-basis: auto !important;
+    margin-bottom: 0 !important;
+  }
+}
+
+@media (max-width: 960px) and (min-width: 801px) {
+  .flip-card-back ul li {
+    flex-basis: 10% !important;
+  }
+}
 
 @media (max-width: 768px) {
   .card {
